--- a/src/pages/attention/attention.scss
+++ b/src/pages/attention/attention.scss
@@ -10,10 +10,24 @@ page{
 .left{
     width: 30%;
     height: 100%;
+    border-right: solid #ccc 1rpx;
+    display: flex;
+    flex-direction: column;
+}
+.leftList,.leftAdd{
+    width: 100%;
+    height: 100rpx;
+    text-align: center;
+    line-height: 100rpx;
+    border-bottom: solid #ccc 1rpx;
+}
+.leftAdd{
+    color: red;
 }
 .rightList{
     flex: 1;
     display: flex;
+    align-items: center;
 }
 .item{
     width: 100%;
@@ -21,11 +35,22 @@ page{
     display: flex;
 }
 .leftItem{
-    width: 100%;
+    width: 70%;
     display: flex;
-    flex-direction: column;
+    align-items:center;
 }
 .leftItem Image{
     width: 30%;
-    height: 90%;
+    height: 80%;
+}
+.right{
+    display: flex;
+    flex-direction: column;
+    font-size: 30rpx;
+    justify-content: space-around;
+}
+.btn {
+    flex: 1;
+    height:80rpx;
+    line-height: 80rpx;
 }
