--- a/src/pages/fill/fill.scss
+++ b/src/pages/fill/fill.scss
@@ -2,4 +2,28 @@ page,.wrap{
     width: 100%;
     height: 100%;
     background: #483354;
+    display:flex;
+    flex-direction: column;
+}
+Input {
+    width:80%;
+    height: 100rpx;
+    margin: 0 auto;
+    background: rgb(80,73,90);
+    border-bottom:solid rgb(97,88,100) 1rpx;
+    border-radius: 10rpx;
+    margin-top: 20rpx;
+}
+Button{
+    width: 80%;
+    height: 100rpx;
+    color:#fff;
+    background: #DD6263;
+    margin-top: 20rpx;
+}
+.list{
+    width:100%;
+    position: absolute;
+    top:20%;
+    height:auto;
 }
