--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,3 +1,7 @@
+page{
+    width: 100%;
+    height: 100%;
+}
 .index{
     width: 100%;
     height: 100%;
@@ -7,7 +11,7 @@
 }
 .scroll{
     flex: 1;
-    overflow: hidden;
+    overflow: auto;
 }
 .header,.headerFix{
     width: 100%;
