--- a/src/pages/attention/attention.scss
+++ b/src/pages/attention/attention.scss
@@ -8,11 +8,12 @@ page{
     display: flex;
 }
 .left{
-    width: 30%;
+    width: 25%;
     height: 100%;
     border-right: solid #ccc 1rpx;
     display: flex;
     flex-direction: column;
+    background: #EBEBEA;
 }
 .leftList,.leftAdd{
     width: 100%;
@@ -20,9 +21,11 @@ page{
     text-align: center;
     line-height: 100rpx;
     border-bottom: solid #ccc 1rpx;
+    background: #F1F1F1;
 }
 .leftAdd{
     color: red;
+    border-left: red solid 2rpx;
 }
 .rightList{
     flex: 1;
@@ -33,6 +36,7 @@ page{
     width: 100%;
     height: 120rpx;
     display: flex;
+    align-items: center;
 }
 .leftItem{
     width: 70%;
@@ -40,8 +44,8 @@ page{
     align-items:center;
 }
 .leftItem Image{
-    width: 30%;
-    height: 80%;
+    width: 25%;
+    height: 100rpx;
 }
 .right{
     display: flex;
@@ -50,7 +54,7 @@ page{
     justify-content: space-around;
 }
 .btn {
-    flex: 1;
     height:80rpx;
     line-height: 80rpx;
+    font-size: 25rpx;
 }
