--- a/src/pages/follow/follow.scss
+++ b/src/pages/follow/follow.scss
@@ -18,3 +18,39 @@ page{
     width: 35%;
     height: 25%;
 }
+.guan{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+.Item{
+    width: 100%;
+    height: 100rpx;
+    display: flex;
+    justify-content: space-around;
+    background: #F1F1F1;
+    align-items: center;
+    border-bottom: solid #ccc 1rpx;
+}
+.list{
+    width: 70%;
+    height: 100%;
+    text-indent: 25rpx;
+    line-height: 100rpx;
+    display: flex;
+    align-items: center;
+}
+.list Text{
+    width: 100%;
+    height: 100%;
+}
+.list image{
+    width:20%;
+    height: 90%;
+    border-radius: 50%;
+}
+.btns{
+    height: 80%;
+    font-size: 25rpx;
+}
